# dreader

./: dfont.py  engine.py  pyproject.toml  reader.py  sample.md  style.py  style.yaml  tts.py
